--- a/src/app/features/entities/components/lead/new-lead/new-lead.component.css
+++ b/src/app/features/entities/components/lead/new-lead/new-lead.component.css
@@ -31,3 +31,20 @@
 #icon i {
   color: #00529b;
 }
+
+.icon-circle {
+  display: inline-block;
+  background-color: #e4e7eb;
+  color: #00529b;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  line-height: 40px;
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+::ng-deep .p-datatable.p-datatable-sm .p-datatable-thead > tr > th {
+  font-size: 14px;
+}
